# data-ingestion-mvp

./: .env.example  .gitignore  README.md  cnae.ipynb  cnae_pyspark.ipynb  ingestions_notebook.ipynb  makedirs.py  pyproject.toml  run.py
src/common/: config.py  io.py
src/pipelines/: banco_central_sgs.py  run_all.py
