[project]
name = "white-cube"
version = "0.1.0"
description = ""
authors = [
    {name = "Edmar Junyor Bevilaqua",email = "edmar.bevi@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]
packages = [{ include = "pipelines", from = "src" }, { include = "common", from = "src" }]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ingestao = "pipelines.run_all:main"
